2004-08-12 21:41 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [Gorm validateMenuItem:] deselect the cut, delete,
	paste, etc. items for top level objects which cannot be
	removed.
	* GormDocument.m: Simplified implementation of
	[GormDocument isTopLevelObject:] to simply check in the
	set of top level objects.
	
2004-08-11 22:41 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[hm]: Added back isTopLevelObject:.
	
2004-08-11 07:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Removed the delegate and data source
	for the outline view.   Changed the code in init to use 
	the GormClassEditor as the outline view, instead of
	instantiating two different classes.   I also changed
	the coded in other areas where "classEditor" was being
	used.  Removed an uneeded method.
	* GormClassEditor.m: Added the delegate here.   Added the
	initialization code from GormDocument init to the init 
	method here.
	* GormPrivate.h: Made GormClassEditor into a subclass
	of GormOutlineView.  This ultimately makes the code 
	cleaner as it unifies the view/editor for the class
	editor.
	
2004-08-09 17:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormFilePrefsManager.m: The method showIncompatibilities:
	added call to "center" method on iwindow so that the 
	incompatibilities window shows up in the center of the
	screen.
	
2004-08-08 16:46 Gregory John Casamento <greg_casamento@yahoo.com>

	* Resource/GormDocument.gorm: Made text label lengths a
	little longer.

2004-08-08 16:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m: Changed the code in 
	handleNotification to not call edited object blindly.
	It now checks to make sure the object responds to the 
	message before calling.
	
2004-08-08 13:43 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSWindow.m: Removed some debugging
	information.
	